Fix font overflow cut

--- a/css/iframe.css
+++ b/css/iframe.css
@@ -19,7 +19,6 @@ a:visited {
 	margin-left: 61px;
 	margin-right: 80px;
 	color: white;
-	overflow: hidden;
 }
 
 #head {
